Add OTLP aggregation system with SQLite backend
Implements a complete aggregation system for OTLP telemetry data:

- SQLite database with session_stats, user_stats, org_stats tables
- File processor that monitors and incrementally processes JSONL files
- Aggregation engine with in-memory caching and periodic flushing
- HTTP API with endpoints for session/user/org statistics
- Configuration support via environment variables
- Comprehensive test coverage for store and engine components

Features:
- Pre-computed aggregations for fast queries
- Real-time processing of incoming telemetry data
- Time-windowed queries (all-time, 7d, 30d)
- Rich statistics: costs, tokens, tool usage, performance metrics
- User and organization-level rollups

API Endpoints:
- GET /api/stats/session/{session_id}
- GET /api/stats/user/{user_id}?limit=10
- GET /api/stats/org/{org_id}?limit=10
- GET /api/health

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ otis
 # Collected data - don't commit telemetry data
 data/
 
+# Database - don't commit aggregated data
+db/
+
 # Go build artifacts
 *.test
 *.out
